@@ -5,38 +5,53 @@ import com.experimentops.common.exceptions.runtime.ValidationException;
 import com.experimentops.experiment.type.model.v1.ExperimentTypeDefaultConfigModel;
 import com.experimentops.experiment.type.model.v1.ExperimentTypeFormatMappingModel;
 import com.experimentops.experiment.type.model.v1.ExperimentTypeRequestModel;
+import com.experimentops.utils.ExperimentOpsUtils;
+import org.apache.commons.lang3.StringUtils;
 import org.openapitools.jackson.nullable.JsonNullable;
 import org.jspecify.annotations.NonNull;
+import org.jspecify.annotations.Nullable;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
+import java.util.Set;
 import java.util.regex.Pattern;
 import java.util.regex.PatternSyntaxException;
 
 @Component
 public class ExperimentTypeValidator extends GenericValidator {
+    private static final Set<Integer> TIME_WEIGHTS = Set.of(1, 2, 3, 5, 8, 13, 20);
 
     public void validateExperimentTypeRequestModel(@NonNull ExperimentTypeRequestModel requestModel) {
         validateInputString("name", requestModel.getName());
         validateDefaultConfig(requestModel.getDefaultConfig());
         validateFormatMappings(requestModel.getFormatMappings());
+        validateTimeWeight(requestModel.getTimeWeight());
     }
 
-    private void validateDefaultConfig(List<ExperimentTypeDefaultConfigModel> defaultConfig) {
-        if (defaultConfig == null || defaultConfig.isEmpty()) {
+    private void validateDefaultConfig(@Nullable List<ExperimentTypeDefaultConfigModel> defaultConfig) {
+        if (ExperimentOpsUtils.isEmpty(defaultConfig)) {
             throw new ValidationException(ErrorCode.REQUIRED_FIELD_MISSING, "defaultConfig");
         }
         defaultConfig.forEach(this::validateDefaultConfigItem);
     }
 
-    private void validateFormatMappings(List<ExperimentTypeFormatMappingModel> formatMappings) {
-        if (formatMappings == null || formatMappings.isEmpty()) {
+    private void validateFormatMappings(@Nullable List<ExperimentTypeFormatMappingModel> formatMappings) {
+        if (ExperimentOpsUtils.isEmpty(formatMappings)) {
             throw new ValidationException(ErrorCode.REQUIRED_FIELD_MISSING, "formatMappings");
         }
         formatMappings.forEach(this::validateFormatMappingItem);
     }
 
-    private void validateFormatMappingItem(ExperimentTypeFormatMappingModel formatMapping) {
+    private void validateTimeWeight(@Nullable Integer timeWeight) {
+        if (timeWeight == null) {
+            throw new ValidationException(ErrorCode.REQUIRED_FIELD_MISSING, "timeWeight");
+        }
+        if (!TIME_WEIGHTS.contains(timeWeight)) {
+            throw new ValidationException(ErrorCode.INVALID_INPUTS, "timeWeight");
+        }
+    }
+
+    private void validateFormatMappingItem(@Nullable ExperimentTypeFormatMappingModel formatMapping) {
         if (formatMapping == null) {
             throw new ValidationException(ErrorCode.INVALID_INPUTS, "formatMappings item");
         }
@@ -48,7 +63,7 @@ public class ExperimentTypeValidator extends GenericValidator {
         }
     }
 
-    private void validateDefaultConfigItem(ExperimentTypeDefaultConfigModel configItem) {
+    private void validateDefaultConfigItem(@Nullable ExperimentTypeDefaultConfigModel configItem) {
         if (configItem == null) {
             throw new ValidationException(ErrorCode.INVALID_INPUTS, "defaultConfig item");
         }
@@ -62,7 +77,7 @@ public class ExperimentTypeValidator extends GenericValidator {
         validateDefaultValue(configItem.getName(), datatype, configItem.getDefaultValue(), regex);
     }
 
-    private void validateDefaultValue(String name, ExperimentTypeDefaultConfigModel.DatatypeEnum datatype, JsonNullable<Object> defaultValue, String regex) {
+    private void validateDefaultValue(@NonNull String name, ExperimentTypeDefaultConfigModel.DatatypeEnum datatype, @Nullable JsonNullable<Object> defaultValue, @Nullable String regex) {
         if (defaultValue == null || !defaultValue.isPresent()) {
             return;
         }
@@ -83,8 +98,8 @@ public class ExperimentTypeValidator extends GenericValidator {
         validateValueMatchesRegex("defaultConfig." + name + ".defaultValue", value, datatype, regex);
     }
 
-    private void validateRegex(String name, ExperimentTypeDefaultConfigModel.DatatypeEnum datatype, String regex) {
-        if (regex == null || regex.isBlank()) {
+    private void validateRegex(@NonNull String name, ExperimentTypeDefaultConfigModel.DatatypeEnum datatype, @Nullable String regex) {
+        if (StringUtils.isBlank(regex)) {
             return;
         }
         if (datatype != ExperimentTypeDefaultConfigModel.DatatypeEnum.STRING) {
@@ -97,8 +112,8 @@ public class ExperimentTypeValidator extends GenericValidator {
         }
     }
 
-    private void validateValueMatchesRegex(String field, Object value, ExperimentTypeDefaultConfigModel.DatatypeEnum datatype, String regex) {
-        if (regex == null || regex.isBlank() || value == null) {
+    private void validateValueMatchesRegex(@NonNull String field, @Nullable Object value, ExperimentTypeDefaultConfigModel.DatatypeEnum datatype, @Nullable String regex) {
+        if (StringUtils.isBlank(regex) || value == null) {
             return;
         }
         if (datatype == ExperimentTypeDefaultConfigModel.DatatypeEnum.STRING && !Pattern.matches(regex, value.toString())) {
@@ -106,7 +121,8 @@ public class ExperimentTypeValidator extends GenericValidator {
         }
     }
 
-    private String getNullableString(JsonNullable<String> value) {
+    @Nullable
+    private String getNullableString(@Nullable JsonNullable<String> value) {
         if (value == null || !value.isPresent()) {
             return null;
         }
